# practice-again

./: .gitignore  Cargo.toml  build.sh  gen.py
app/: main.rs  task1.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs
python/: task2.py
src/: checksum.rs  lib.rs  sig_search.rs  text_hiding.rs  text_stats.rs  utils.rs  xor.rs
